--- a/templates/register.html
+++ b/templates/register.html
@@ -75,8 +75,8 @@
 
         <form method="POST" action="">
             {{form.hidden_tag()}}
-            {{form.username}}<br>
-            {{form.password}}<br>
+            {{form.username}}<br><br>
+            {{form.password}}<br><br>
             {{form.submit}}
         </form>
 
