--- a/templates/login.html
+++ b/templates/login.html
@@ -68,8 +68,8 @@
     <div class="center">
         <form method="POST" action="">
             {{form.hidden_tag()}}
-            {{form.username}}<br>
-            {{form.password}}<br>
+            {{form.username}}<br><br>
+            {{form.password}}<br><br>
             {{form.submit}}
         </form>
 
